20080313
 - (djm) [Makefile.in regress/Makefile] Fix interop-tests target (note to
   self: make changes to Makefile.in next time, not the generated Makefile).
 - (djm) [Makefile.in regress/test-exec.sh] Find installed plink(1) and
   puttygen(1) by $PATH
 - (tim) [scp.c] Use poll.h if available, fall back to sys/poll.h if not. Patch
   by vinschen at redhat.com.

20080312
 - (djm) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/10/29 06:57:13
     [regress/Makefile regress/localcommand.sh]
     Add simple regress test for LocalCommand; ok djm@
   - jmc@cvs.openbsd.org 2007/11/25 15:35:09
     [regress/agent-getpeereid.sh regress/agent.sh]
     more existant -> existent, from Martynas Venckus;
     pfctl changes: ok henning
     ssh changes: ok deraadt
   - djm@cvs.openbsd.org 2007/12/12 05:04:03
     [regress/sftp-cmds.sh]
     unbreak lls command and add a regress test that would have caught the
     breakage; spotted by mouring@
     NB. sftp code change already committed.
   - djm@cvs.openbsd.org 2007/12/21 04:13:53
     [regress/Makefile regress/test-exec.sh regress/putty-ciphers.sh]
     [regress/putty-kex.sh regress/putty-transfer.sh regress/ssh2putty.sh]
     basic (crypto, kex and transfer) interop regression tests against putty
     To run these, install putty and run "make interop-tests" from the build
     directory - the tests aren't run by default yet.

20080311
 - (dtucker) [auth-pam.c monitor.c session.c sshd.c] Bug #926: Move
   pam_open_session and pam_close_session into the privsep monitor, which
   will ensure that pam_session_close is called as root.  Patch from Tomas
   Mraz.

20080309
 - (dtucker) [configure.ac] It turns out gcc's -fstack-protector-all doesn't
   always work for all platforms and versions, so test what we can and
   add a configure flag to turn it of if needed.  ok djm@
 - (dtucker) [openbsd-compat/port-aix.{c,h}] Remove AIX specific initgroups
   implementation.  It's not needed to fix bug #1081 and breaks the build