@@ -44,12 +44,12 @@ rm -rf ${COPY} ${COPY}.1 ${COPY}.2 ${COPY}.dd ${COPY}.dd2
 mkdir ${COPY}.dd
 
 verbose "$tid: lls"
-echo "cd ${OBJ}\nlls" | ${SFTP} -P ${SFTPSERVER} 2>&1 | \
-	grep -q copy.dd || fail "lls failed"
+echo "cd ${OBJ}" ; echo "lls" | ${SFTP} -P ${SFTPSERVER} 2>&1 | \
+	grep copy.dd >/dev/null 2>&1 || fail "lls failed"
 
 verbose "$tid: lls w/path"
 echo "lls ${OBJ}" | ${SFTP} -P ${SFTPSERVER} 2>&1 | \
-	grep -q copy.dd || fail "lls w/path failed"
+	grep copy.dd >/dev/null 2>&1 || fail "lls w/path failed"
 
 verbose "$tid: ls"
 echo "ls ${OBJ}" | ${SFTP} -P ${SFTPSERVER} >/dev/null 2>&1 \
